# trex-imager-readfile

./: .gitignore  LICENSE  README.md  trex_imager_readfile.pro
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
idl/: README.md  idlpackage.json  trex_imager_readfile.pro  trex_imager_readfile_startup.pro
idl-extra/: README.md  dir_exist.pro  tag_exist.pro
idl/tools/: README.md
python/: .flake8  Makefile  README.md  pyproject.toml  pytest.ini
python/examples/: .gitignore  read_blueline.ipynb  read_blueline.py.ipynb  read_nir.ipynb  read_rgb.ipynb  read_spectrograph.ipynb
python/tests/test_suite/: test_read_blueline.py  test_read_nir.py  test_read_rgb_stream0.py  test_read_rgb_stream0burst.py  test_read_rgb_unstable_stream0.py  test_read_rgb_unstable_stream0colour.py  test_read_spectrograph.py  test_version.py
python/tests/test_suite/data/blueline/: 20220308_0605_gill_blue-814_full.pgm
python/tests/test_suite/data/nir/: 20220307_0605_gill_nir-216_8446.pgm
python/tests/test_suite/data/spectrograph/: 20230503_0605_luck_spect-02_spectra.pgm
python/tools/: bump_version.py
python/trex_imager_readfile/: __init__.py  _trex.py  blueline.py  grid.py  nir.py  rgb.py  spectrograph.py
