[tool.poetry]
name = "trex-imager-readfile"
version = "1.0.8"
description = "Read functions for TREx ASI PGM raw files"
readme = "README.md"
homepage = "https://github.com/ucalgary-aurora/trex-imager-readfile"
repository = "https://github.com/ucalgary-aurora/trex-imager-readfile"
authors = ["Darren Chaddock <dchaddoc@ucalgary.ca>"]
license = "MIT"
packages = [
    { include = "trex_imager_readfile" },
]

[tool.poetry.dependencies]
python = "^3.7.2"
numpy = "^1.21.0"
opencv-python = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^5.0.0"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
