[tool.poetry]
name = "trex-imager-readfile"
version = "1.2.0"
description = "Read functions for TREx ASI raw image files"
readme = "README.md"
homepage = "https://github.com/ucalgary-aurora/trex-imager-readfile"
repository = "https://github.com/ucalgary-aurora/trex-imager-readfile"
authors = ["Darren Chaddock <dchaddoc@ucalgary.ca>"]
license = "MIT"
packages = [
    { include = "trex_imager_readfile" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "^1.24.0"
opencv-python = "^4.7.0"
h5py = "^3.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
flake8 = "^6.0.0"
pylint = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
